deprecate된 내용 대체